* Author: Mike FABIAN <mfabian@redhat.com>
* 18 Mar 2017 Released 1.5.28 version
* Allow query by code point even if Python’s unicodedata.name() does not know the character
* Also read names from emoji-sequences.txt and emoji-zwj-sequences.txt
* itb_emoji.py: Also read emoji-sequences.txt (from unicode.org)
* Fix positioning of info popover (fix a typo in an “if” statement)
* Show emoji properties from unicode.org when debugging is on
* itb_emoji.py: Also read emoji-zwj-sequences.txt (from unicode.org)
* Also use the emoji properties from unicode.org to decide whether to offer a lookup on emojipedia
* Use property “Emoji_Modifier_Base” from emoji-data.txt to check whether an emoji supports skin tones
* itb_emoji.py: Also read emoji-data.txt (from unicode.org)
* Tentative skin tone support for families
* Improve skin tone support: make it work for professions (roles) as well
* Make skin tone popover scrollable and limit its maximum size

* Author: Mike FABIAN <mfabian@redhat.com>
* 17 Mar 2017 Released 1.5.27 version
* Update translations from zanata (pl, uk updated)
* emoji-picker: make skin tone selection work for gendered emoji

* Author: Mike FABIAN <mfabian@redhat.com>
* 16 Mar 2017 Released 1.5.26 version
* Update translations from zanata (de updated)
* Fix display of warning message when a dictionary is not installed.
* Emulate xdg.BaseDirectory.save_data_path() on systems which lack pyxdg
* Show the skin tone popover also on a long press gesture
* Fix pyhunspell support Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/5#issuecomment-286251818

* Author: Mike FABIAN <mfabian@redhat.com>
* 13 Mar 2017 Released 1.5.25 version
* Update translations from zanata (de, pl, uk updated, zh_CN new)
* Show the categories as well on right mouse click in emoji-picker
* Improve information displayed on right mouse click in emoji-picker
* html.unescape() the strings parsed from the cldr annotations